# dl-uz-push-s3

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  devcontainer.json.bak
src/: app.py  file_downloader.py  file_unzipper.py  s3_uploader.py
